--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   grid-row: 1/2;
   margin: 10px 20px 0px 20px;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,7 +60,7 @@ body {
 #timer-display,
 #cps-display,
 #score-display {
-  font-size: 50px;
+  font-size: 40px;
 }
 
 #clicker {
@@ -85,7 +85,7 @@ body {
 }
 
 #clicker.result {
-  font-size: 50px;
+  font-size: 40px;
   font-style: italic;
   font-weight: bold;
 }
@@ -115,7 +115,7 @@ body {
   min-width: 300px;
   min-height: 60px;
   font-family: monospace;
-  font-weight: 600;
+  font-weight: normal;
   font-size: 30px;
   color: white;
   background-color: hsl(0, 0%, 30%);
@@ -128,11 +128,12 @@ body {
 
 .time-setters.active {
   background: linear-gradient(to right, #fc541c, #f8ac30);
-  border: 4px solid;
+  font-weight: bold;
 }
 
 .time-setters:hover {
   background-color: hsl(0, 0%, 40%);
+  border: 4px solid;
 }
 
 #reset-button {
@@ -141,17 +142,22 @@ body {
   min-height: 60px;
   font-family: monospace;
   font-weight: 600;
-  font-size: 35px;
-  font-weight: bold;
+  font-size: 30px;
+  font-weight: normal;
   color: white;
   background-color: hsl(0, 0%, 30%);
   border: none;
   border-radius: 20px;
   box-shadow: 0px 0px 30px 5px hsl(0, 0%, 15%, 0.2);
   cursor: pointer;
-  transition: ease-in 0.1s;
+  transition: ease-in 0.01s;
 }
 
 #reset-button.active {
   background: linear-gradient(to right, #f0126e, #fe6209);
+  font-weight: bold;
+}
+
+#reset-button:hover {
+  border: 4px solid;
 }
